<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="device_parts_title">OnePlus Settings</string>
    <string name="device_parts_summary">Adjust OnePlus specific device settings</string>

    <!-- Notification slider -->
    <string name="notification_slider_category_title">Notification slider</string>
    <string name="notification_slider_selection_dialog_title">Action</string>
    <string name="notification_slider_top_position">Top position</string>
    <string name="notification_slider_middle_position">Middle position</string>
    <string name="notification_slider_bottom_position">Bottom position</string>
    <string name="notification_slider_mode_total_silence">Total silence</string>
    <string name="notification_slider_mode_alarms_only">Alarms only</string>
    <string name="notification_slider_mode_priority_only">Priority only</string>
    <string name="notification_slider_mode_silent">Silent</string>
    <string name="notification_slider_mode_vibrate">Vibrate</string>
    <string name="notification_slider_mode_none">Normal</string>
    <string name="buttons_dashboard_summary">Alert Slider Settings</string>

    <!-- Display -->
    <string name="display_settings_title">Display</string>
    <string name="custom_doze_settings_title">Advanced doze settings</string>
    <string name="custom_doze_settings_summary">Handle sensor related wake events</string>
    <string name="touchscreen_gesture_settings_title">Touchscreen gestures</string>
    <string name="touchscreen_gesture_settings_summary">Perform various touchscreen gestures for quick actions</string>
    <string name="dc_dimming_summary">Turn on automatic DC dimming based on sunrise, sunset &amp; brightness</string>
    <string name="dc_dimming_title">Automated DC-Dimming</string>

</resources>

