<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/display_settings_title">

        <Preference
            android:key="doze"
            android:persistent="false"
            android:icon="@drawable/ic_doze"
            android:title="@string/custom_doze_settings_title"
            android:summary="@string/custom_doze_settings_summary">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetPackage="org.shapeshift.settings.doze" 
                    android:targetClass="org.shapeshift.settings.doze.DozeSettingsActivity"/>
        </Preference>

        <Preference
            android:key="touchscreen_gesture_settings"
            android:persistent="false"
            android:icon="@drawable/ic_gestures_icon"
            android:title="@string/touchscreen_gesture_settings_title"
            android:summary="@string/touchscreen_gesture_settings_summary">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.touch.gestures"
                    android:targetClass="com.android.touch.gestures.TouchscreenGestureSettings" />
        </Preference>

        <Preference
            android:key="dc_dim"
            android:enabled="true"
            android:icon="@drawable/dc_dim_icon"
            android:title="@string/dc_dimming_title"
            android:summary="@string/dc_dimming_summary">
            <intent
                    android:action="android.settings.DC_DIMMING_SETTINGS" /> 
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notification_slider_category_title">

        <ListPreference
            android:key="keycode_top_position"
            android:dialogTitle="@string/notification_slider_selection_dialog_title"
            android:title="@string/notification_slider_top_position"
            android:icon="@drawable/ic_up_icon"
            android:summary="%s"
            android:entries="@array/notification_slider_action_entries"
            android:entryValues="@array/notification_slider_action_entry_values" />

        <ListPreference
            android:key="keycode_middle_position"
            android:dialogTitle="@string/notification_slider_selection_dialog_title"
            android:title="@string/notification_slider_middle_position"
            android:summary="%s"
            android:icon="@drawable/ic_middle_icon"
            android:entries="@array/notification_slider_action_entries"
            android:entryValues="@array/notification_slider_action_entry_values" />

        <ListPreference
            android:key="keycode_bottom_position"
            android:dialogTitle="@string/notification_slider_selection_dialog_title"
            android:title="@string/notification_slider_bottom_position"
            android:summary="%s"
            android:icon="@drawable/ic_down_icon"
            android:entries="@array/notification_slider_action_entries"
            android:entryValues="@array/notification_slider_action_entry_values" />

    </PreferenceCategory>

</PreferenceScreen>
